hphp/test/zend/good/ext/shmop/tests/001.php.skipif
<?php
if (!extension_loaded("shmop")) {
  die("skip shmop() extension not available");
}
?>
