hphp/test/zend/bad/ext/imap/tests/bug45705_2.php.skipif
<?php
	if (!extension_loaded("imap")) { 
		die("skip imap extension not available");  
	}
?>